# spdx-to-dep5

./: .gitignore  .mailmap  Cargo.lock.license  Cargo.toml  build.gradle.kts  settings.gradle.kts
.github/workflows/: rust.yml
.reuse/: dep5
app/: build.gradle
app/com/collabora/spdx2dep5/: App.kt
copyright_statements/: Cargo.toml
copyright_statements/src/: copyright.rs  copyright_parsing.rs  lib.rs  years.rs
copyright_statements/src/raw_year/: mod.rs  options.rs  parse.rs  traits.rs  types.rs  util.rs
dep5-from-wildcards/: Cargo.toml  wildcards.toml
dep5-from-wildcards/src/: input_file.rs  main.rs
gradle/wrapper/: gradle-wrapper.properties
src/: KeyValueParser.rs  async_functions.rs  atom_table.rs  builder.rs  cleanup.rs  cli_help.rs  control_file.rs  copyright.rs  copyright_parsing.rs  dep5.rs  entry.rs  key_value_parser.rs  lib.rs  main.rs  parse.rs  record.rs  tree.rs  years.rs
src/deb822/: control_file.rs  dep5.rs  mod.rs
src/raw_year/: mod.rs  options.rs  parse.rs  traits.rs  types.rs  util.rs
src/tag_value/: key_value_parser.rs  mod.rs  parsed_line.rs  policies.rs
