# SPDX-FileCopyrightText: 2021-2024, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
description = "A tool to help in Debian package maintenance, converting SPDX tag-value files, often extracted by REUSE, into a basic debian/copyright file."
edition = "2018"
name = "spdx-to-dep5"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive", "cargo"]}
derive_more = "0.99"
env_logger = "0.11.1"
indextree = "4.4"
itertools = "0.12.1"
lazy_static = "1.4"
log = "0.4"
regex = "1.5"
spdx-rs = "=0.5.3"
thiserror = "1.0"
typed-index-collections = "3.0"
