# SPDX-FileCopyrightText: 2021-2025, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
description = "A tool to help in Debian package maintenance, converting SPDX tag-value files, often extracted by REUSE, into a basic debian/copyright file."
edition = "2018"
name = "spdx-to-dep5"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
copyright_statements = { version = "=0.7.0", path = "copyright_statements" }
derive_more = { version = "1", features = ["from", "into"] }
env_logger = "0.11.1"
indextree = "4.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4"
nom = "7.1"
regex = "1.5"
spdx-rs = "=0.5.5"
# spdx-expression = { git = "https://github.com/rpavlik/spdx-expression.git", branch = "hashable-expressions" }
thiserror = "2.0.3"
typed-index-collections = "3.0"
atom_table = "1.0.0"

[patch.crates-io]
spdx-expression = { git = "https://github.com/rpavlik/spdx-expression.git", branch = "hashable-expressions" }
spdx-rs = { git = "https://github.com/rpavlik/spdx-rs.git", branch = "fix-date" }
# spdx-expression = { path = "../third-party/spdx-expression" }

[workspace]
members = ["copyright_statements", "dep5-from-wildcards"]
