# SPDX-FileCopyrightText: 2021-2025, Collabora, Ltd.
# SPDX-License-Identifier: CC0-1.0

[package]
authors = ["Rylie Pavlik <rylie.pavlik@collabora.com>"]
description = "Functionality for parsing, merging, and otherwise interacting with copyright statements"
edition = "2018"
name = "copyright_statements"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1", features = ["from", "into"] }
indextree = "4.5"
itertools = "0.14.0"
log = "0.4"
nom = "7.1"
thiserror = "2.0"
typed-index-collections = "3.1"
